Require that the "facts" object only contain "string" type fields Improve tests around this
